home-k8s/admin/argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd
spec:
  tls:
  - hosts:
      - argocd.home-k8s.sigurs.io
    secretName: argocd-tls
  rules:
    - host: argocd.home-k8s.sigurs.io
      http: 
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argocd-server
              port:
                name: http
